Added help command

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>DawnBot aw yiss</title>
+        <title><%= botName %> aw yiss</title>
     </head>
     <body>
-        <h1>DawnBot</h1>
-        <h2>Commands: (they arent case sensitive)</h2>   
+        <h1><%= botName %></h1>
+        <h2>Commands: (they aren't case sensitive)</h2>   
         <p><strong>Ping</strong> - Sends a pong back to you (good to see if your internet is working)</p>
         <p><strong>Flip a coin</strong> (with spaces) - send a coin side back to you (good to win anything) </p>
         <p><strong>Help</strong> - Send you there</p>
