added contact info

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,7 @@
         <p><strong>Ping</strong> - Sends a pong back to you (good to see if your internet is working)</p>
         <p><strong>Flip a coin</strong> (with spaces) - send a coin side back to you (good to win anything) </p>
         <p><strong>Help</strong> - Send you there</p>
+        <hr>
+        <p>If you want the bot in your server, contact <%= botAdminContact %> on discord</p>
     </body>
 </html>
